Align designed for developers correctly

--- a/src/css/pages/index.styl
+++ b/src/css/pages/index.styl
@@ -19,7 +19,7 @@
       color: $hanzoPurple
 
     .columns
-      align-items: top
+      align-items: flex-start
 
       .content
         margin: $spacing * 2
@@ -37,6 +37,8 @@
         padding 0
 
     .columns
+      align-items: top
+
       .column
         .content
           p
